# MengProject

./: .gitignore  .gitmodules  README.md  build.gradle.kts  detekt-config.yml  rlottie.sh  settings.gradle.kts  update.py
.github/workflows/: main.yml
LottieToGif/: .gitignore  CMakeLists.txt  build.gradle
LottieToGif/src/main/cpp/: CMakeLists.txt  gif.h  lottie2gif.cpp  lottietogif.h
LottieToGif/src/main/java/jni/: GifBuilder.java
jni/: CMakeLists.txt  build.gradle  build.sh
jni/src/main/cpp/lottie2gif/: CMakeLists.txt  gif.h  lottie2gif.cpp  lottietogif.h
jni/src/main/cpp/webp2png/: CMakeLists.txt  webp2png.cpp  webptopng.h
jni/src/main/java/jni/: LibraryLoader.java  NativeBuilder.java
src/main/kotlin/: ConfigLoader.kt  main.kt  zh-CN.kt
src/main/kotlin/callback/: CallbackMethod.kt  DeleteButton.kt
src/main/kotlin/command/api/: CoronaDataCommand.kt  CryptoCommand.kt  QRCommand.kt  SpeechCommand.kt  WikiCommand.kt
src/main/kotlin/command/cache/: ChromeDriverCache.kt  MusicCache.kt  QRCache.kt  StatusLock.kt
src/main/kotlin/command/download/: GifDownload.kt  StickerDownload.kt  VideoDownload.kt
src/main/kotlin/command/method/: DeleteCommand.kt  SendCommand.kt
src/main/kotlin/command/net/: ConstellationSpider.kt  ImageSearch.kt  NetUtils.kt  ShotCommand.kt
src/main/kotlin/command/rawtext/: DreamCommand.kt  HelpCommand.kt  LunarCommand.kt  MusicCommand.kt  PeopleCommand.kt  RemakeCommand.kt  (+3 more)
src/main/kotlin/dsl/: Message.kt  Process.kt  String.kt  User.kt
src/main/kotlin/envirenment/: EnvironmentStatus.kt
src/main/kotlin/file/: FileUtils.kt
(+19 files in other folders)
